--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
 
         <!-- navbar-->
-        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
+        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgdefination">
 
             <div class="container-fluid align-items-center">
 
@@ -105,11 +105,6 @@
         </nav>
 
 
-        <section class="bgblack">
-
-            <div style="height: 500px;"></div>
-
-        </section>
 
 
 
@@ -117,15 +112,9 @@
         <!-- defination -->
         <section class="bgdefination" id="defination">
 
-            <!-- curve -->
-            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill" fill="black" fill-opacity="1"></path>
-            </svg>
+            
 
-            <div style="height: 20px;"></div>
+            <div style="height: 60px;"></div>
 
 
 
@@ -185,7 +174,8 @@
 
                         <!-- MOSAIC PATTERS    -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/mosaic_pattern.jpg"
+                                    class="img-fluid img-effects " alt="JFSP logo"></p>
                             <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
 
 
@@ -320,6 +310,8 @@
 
                         <!-- IAWF    -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
+                            <p class="text-center mb-2"><img src="img/IAWF_logo.jpg"
+                                    class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
 
                             <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
@@ -339,7 +331,8 @@
 
                         <!-- PyroLife -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/pyrolife.jpeg"
+                                    class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                             <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
 
 
@@ -357,7 +350,8 @@
 
                         <!-- TTRS -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/Tall_timbers.jpg"
+                                    class="img-fluid img-logo rounded-circle " alt="tall timbers logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 "> Tall Timbers Research Station</p>
 
 
@@ -377,7 +371,8 @@
 
                         <!-- AFE -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/AFE.jpeg"
+                                    class="img-fluid img-logo rounded-circle " alt="AFE logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 ">Association for Fire
                                 Ecology</p>
 
@@ -397,7 +392,8 @@
 
                         <!-- BNS CRC -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/Bushfire.jpeg"
+                                    class="img-fluid img-logo rounded-circle " alt="bushfire logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 ">Bushfire and Natural Hazards</p>
 
 
@@ -416,7 +412,8 @@
 
                         <!-- FLN -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/FLN.png"
+                                    class="img-fluid img-logo rounded-circle " alt="FLN logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 ">Fire Learning Network</p>
 
 
@@ -436,7 +433,8 @@
 
                         <!-- JFSP -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/JFE.jpeg"
+                                    class="img-fluid img-logo rounded-circle " alt="JFSP logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 ">Joint Fire Science Program</p>
 
 
@@ -457,7 +455,8 @@
 
                         <!-- SFE -->
                         <div class="col-10 col-md-7 col-lg-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/SFE.jpeg"
+                                    class="img-fluid img-logo rounded-circle " alt="SFE logo"></p>
                             <p class="fs-3 text-center font-tektur mt-3 ">Southern Fire Exchange</p>
 
 
