--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
             <div class="container-fluid py-5">
                 <div class="row ">
                     <!-- left side text -->
-                    <div class="col-6 d-flex justify-content-center">
+                    <div class="col-6 ">
+
                     </div>
 
                     <!-- right side img -->
@@ -202,7 +203,7 @@
                 <div class="row justify-content-evenly mt-5">
 
                     <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-
+                        <p class="text-center mb-2"><img src="img/pyrolife.jpeg" class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                         <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
 
 
@@ -219,6 +220,8 @@
 
                     <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
+
+                        <p class="text-center mb-2"><img src="img/IAWF_logo.jpg" class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                         <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
 
@@ -311,6 +314,83 @@
 
                 <div class="text-center mt-3">
                     <a href="about.html#environmentEff" class="btn button-l2 fs-6 px-3">Know More!</a>
+                </div>
+
+                <div style="height: 50px;"></div>
+            </div>
+        </section>
+
+
+
+
+        <!-- Section 4 -->
+        <section class="bgCaseStudy">
+
+            <!-- curve -->
+            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="bgEffects" fill="currentcolor" fill-opacity="1"></path>
+            </svg>
+
+            <div style="height: 20px;"></div>
+
+
+            <div class="container-fluid">
+                <div class="row justify-content-evenly">
+
+                    <div class="col-12 text-center">
+                        <h3 class="fs-2">Case Studies</h3>
+
+                    </div>
+
+                </div>
+
+
+                <div class="row justify-content-evenly mt-5">
+
+                    <div class="col-10 col-md-8 col-lg-5 caseStudy-card rounded-4 shadow-lg p-4 my-4">
+
+                        <p class="fs-1 text-center font-tektur mt-3 ">Fire Fuels</p>
+
+
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">"Forest fires are a nightmare and result in
+                            ecological disasters
+                            that are
+                            impossible to control through conventional methods. I realised we are fighting a war with
+                            the age-old conventional methods of dousing fires by beating them with bushes and tree
+                            branches." Vikas told The Better India. During his research to stop Jharkhand's horrendous
+                            forest fires, Vikas Ujjwal, Divisional
+                            Forest Officer of Jharkhand's Lohardaga district, came across a Class 6 physics chapter,
+                            what did he find in it?</p>
+
+                        </p>
+
+                    </div>
+
+                    <div class="col-10 col-md-8 col-lg-5 caseStudy-card rounded-4 shadow-lg p-4 my-4">
+
+                        <p class="fs-1 text-center font-tektur mt-3 ">Fire and Development</p>
+
+
+                        <div style="height: 50px;"></div>
+                        <p class="fs-5 rocket-text font-exo text-justify">The relationship between fire and development
+                            is a multifaceted
+                            and intricate one, often presenting challenges and opportunities at the intersection of
+                            human progress and ecological dynamics. In the context of urban planning and infrastructure
+                            expansion, the consequences of uncontrolled fires can be devastating. One illustrative case
+                            study is the Great Fire of London in 1666, but what happened in london?</p>
+
+                        </p>
+
+                    </div>
+
+                </div>
+
+                <div class="text-center mt-3">
+                    <a href="about.html#environmentEff" class="btn button-l3 fs-6 px-3">Read them!</a>
                 </div>
 
                 <div style="height: 50px;"></div>
