--- a/reports.html
+++ b/reports.html
@@ -24,103 +24,110 @@
 
 
 
-        <!-- navbar-->
-        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
 
-            <div class="container-fluid align-items-center">
-
-                <a href="index.html" class="nav-brand text-light p-2 fs-3 ms-3">
-
-
-                    <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="1.4em" fill="white"
-                        class="bi bi-fire" viewBox="0 0 16 16">
-                        <path
-                            d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
-                    </svg>
-                </a>
-
-
-                <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTwo">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-
-
-            <div class="collapse navbar-collapse me-3" id="navbarTwo">
-                <ul class="navbar-nav ms-auto  d-flex align-items-center ">
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange ">Home</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
-                                class="nav-link  hover-orange">About</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
-                                class="nav-link  hover-orange">Blog</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
-                        class="nav-link hover-orange active">Reports</a></b>
-                    </li>
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
-                                class="nav-link hover-orange">Quiz</a></b>
-                    </li>
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
-                                class="nav-link ">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
-                                    class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-                            </a> </b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
-                                onclick="logout()">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
-                                    class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
-                                    <path fill-rule="evenodd"
-                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
-                                </svg>
-                            </a> </b>
-                    </li>
-
-
-                </ul>
-            </div>
-
-            </div>
-        </nav>
 
 
 
         <!-- landing -->
-        <section class="mt-5">
+        <section class="caseStudyLanding">
+
+            <!-- navbar-->
+
+            <nav class="navbar navbar-expand-md navbar-dark pt-3 ">
+
+                <div class="container-fluid align-items-center">
+
+                    <a href="index.html" class="nav-brand text-light p-2 fs-3 ms-3">
+
+
+                        <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="1.4em" fill="white"
+                            class="bi bi-fire" viewBox="0 0 16 16">
+                            <path
+                                d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
+                        </svg>
+                    </a>
+
+
+                    <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTwo">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+
+
+                <div class="collapse navbar-collapse me-3" id="navbarTwo">
+                    <ul class="navbar-nav ms-auto  d-flex align-items-center ">
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
+                                    class="nav-link hover-orange ">Home</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
+                                    class="nav-link  hover-orange">About</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
+                                    class="nav-link  hover-orange">Blog</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
+                                    class="nav-link hover-orange active">Reports</a></b>
+                        </li>
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                    class="nav-link hover-orange">Quiz</a></b>
+                        </li>
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
+                                    class="nav-link ">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                        class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
+                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                        <path fill-rule="evenodd"
+                                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                    </svg>
+                                </a> </b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
+                                    onclick="logout()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                        class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                        <path fill-rule="evenodd"
+                                            d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                                    </svg>
+                                </a> </b>
+                        </li>
+
+
+                    </ul>
+                </div>
+
+                </div>
+            </nav>
+
+            <div style="height: 50px;"></div>
 
             <div class="container-fluid py-5">
                 <div class="row ">
                     <!-- left side text -->
-                    <div class="col-6 d-flex justify-content-center">
+                    <div class="col-12 text-center">
+                        <b>
+                            <p class="fs-1 font-exo">Case Studies</p>
+                        </b>
+                        <img src="img/case_study.png" class="img-fluid img-landing-case" alt="">
                     </div>
 
-                    <!-- right side img -->
-                    <div class="col-6">
-                    </div>
+
                 </div>
             </div>
 
-            <div style="height: 150px;"></div>
 
         </section>
 
@@ -129,15 +136,10 @@
 
 
         <!-- Section 1 -->
-        <section class="mt-5 caseStudy1">
+        <section class="caseStudy1">
 
-            <!-- curve -->
-            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill" fill="black" fill-opacity="1"></path>
-            </svg>
+           
+
 
             <div style="height: 20px;"></div>
 
@@ -146,7 +148,7 @@
                 <div class="row justify-content-evenly">
 
 
-                    
+
                     <div class="col-11 text-justify">
 
                         <p class="fs-1 font-preahvihear text-center mt-5">Case Study 1: Fighting fire with leaves</p>
@@ -347,7 +349,7 @@
                             exploiting burnt trees for insects and nest cavities, flourished in the aftermath. This
                             exemplifies the intricate web of interactions in fire, where some species benefit
                             from disturbance while others face setbacks.<br>
-                            <img src="img/animal_fire.jpg" alt="" class="img-fluid caseImg float-md-end"> 
+                            <img src="img/animal_fire.jpg" alt="" class="img-fluid caseImg float-md-end">
 
 
                             Importantly, fire's influence isn't limited to immediate post-fire effects. Over the long
@@ -357,7 +359,7 @@
                             managers valuable lessons about the role of fire in shaping animal habitats. Subsequent
                             management strategies now incorporate controlled burns to mimic natural processes, promote
                             vegetation diversity, and create a dynamic landscape that caters to the needs of a wide
-                            array of animal species.<br> 
+                            array of animal species.<br>
 
                             In conclusion, the story of fire and its impact on animal habitats is one of
                             complexity and adaptation. Through destruction and rebirth, fire shapes landscapes,
