--- a/blog.html
+++ b/blog.html
@@ -18,12 +18,12 @@
 
     </head>
 
-    <body class="bgBlog " onload="dataAndicon()">
+    <body class="bgblack " onload="dataAndicon()">
 
 
-        <section class="" id="blurBG">
+        <section class="bgBlog" id="blurBG">
             <!-- navbar-->
-            <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
+            <nav class="navbar navbar-expand-md navbar-dark pt-3 ">
 
                 <div class="container-fluid align-items-center">
 
@@ -62,10 +62,6 @@
                                     class="nav-link  hover-orange active">Blog</a></b>
                         </li>
 
-
-                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
-                                    class="nav-link hover-orange">Quiz</a></b>
-                        </li>
 
                         <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                     class="nav-link hover-orange">Reports</a></b>
@@ -131,7 +127,7 @@
                         <div class="col-5 text-center">
 
                             <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                            <span role="status">Loading...</span>
+                            <span role="status">Please wait....loading blogs</span>
 
                         </div>
                     </div>
@@ -144,7 +140,7 @@
             </section>
 
             <!-- footer -->
-            <footer class="bgblack pb-5 pt-3">
+            <footer class="bgblack pb-5 pt-3 mt-5">
                 <div class="container">
                     <div class="row justify-content-center">
 
@@ -191,7 +187,7 @@
         </section>
 
         <section id="blogReads">
-            
+
 
         </section>
         <!-- 
