--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
         <!-- navbar-->
-        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
+        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgWhat">
 
             <div class="container-fluid align-items-center">
 
@@ -105,42 +105,16 @@
 
 
 
-        <!-- landing -->
-        <section class="mt-5">
-
-            <div class="container-fluid py-5">
-                <div class="row ">
-                    <!-- left side text -->
-                    <div class="col-6 ">
-
-                    </div>
-
-                    <!-- right side img -->
-                    <div class="col-6">
-                    </div>
-                </div>
-            </div>
-
-            <div style="height: 150px;"></div>
-
-        </section>
-
 
 
 
 
         <!-- Section 1 -->
-        <section class="mt-5 bgWhat">
+        <section class="bgWhat ">
 
-            <!-- curve -->
-            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
-                preserveAspectRatio="none">
-                <path
-                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-                    class="shape-fill" fill="black" fill-opacity="1"></path>
-            </svg>
 
-            <div style="height: 20px;"></div>
+
+            <div style="height: 50px;"></div>
 
 
             <div class="container-fluid">
@@ -203,7 +177,8 @@
                 <div class="row justify-content-evenly mt-5">
 
                     <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
-                        <p class="text-center mb-2"><img src="img/pyrolife.jpeg" class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
+                        <p class="text-center mb-2"><img src="img/pyrolife.jpeg"
+                                class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                         <p class="fs-2 text-center font-tektur mt-3 ">PyroLife</p>
 
 
@@ -221,7 +196,8 @@
                     <div class="col-10 col-md-5 organisation-card rounded-4 shadow-lg p-4 my-4">
 
 
-                        <p class="text-center mb-2"><img src="img/IAWF_logo.jpg" class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
+                        <p class="text-center mb-2"><img src="img/IAWF_logo.jpg"
+                                class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                         <p class="fs-2 text-center font-tektur mt-3 "> IAWF</p>
 
 
@@ -351,7 +327,8 @@
                 <div class="row justify-content-evenly mt-5">
 
                     <div class="col-10 col-md-8 col-lg-5 caseStudy-card rounded-4 shadow-lg p-4 my-4">
-
+                        <p class="text-center mb-2"><img src="img/fire_fuel.jpg"
+                                class="img-fluid img-logo rounded-circle " alt="pyrolife logo"></p>
                         <p class="fs-1 text-center font-tektur mt-3 ">Fire Fuels</p>
 
 
@@ -371,7 +348,8 @@
                     </div>
 
                     <div class="col-10 col-md-8 col-lg-5 caseStudy-card rounded-4 shadow-lg p-4 my-4">
-
+                        <p class="text-center mb-2"><img src="img/city.png" class="img-fluid img-logo rounded-circle "
+                                alt="pyrolife logo"></p>
                         <p class="fs-1 text-center font-tektur mt-3 ">Fire and Development</p>
 
 
