--- a/quiz.html
+++ b/quiz.html
@@ -17,10 +17,10 @@
 
     </head>
 
-    <body class="bgdblue" onload="userIcon()">
+    <body class="" onload="userIcon()">
 
         <!-- navbar-->
-        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
+        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgdblue">
 
             <div class="container-fluid align-items-center">
 
@@ -57,7 +57,7 @@
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
                                 class="nav-link  hover-orange">Blog</a></b>
                     </li>
-                    
+
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                 class="nav-link hover-orange ">Reports</a></b>
                     </li>
@@ -66,7 +66,7 @@
                                 class="nav-link hover-orange active">Quiz</a></b>
                     </li>
 
-                    
+
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
                                 class="nav-link ">
@@ -99,11 +99,11 @@
             </div>
         </nav>
 
-        <div style="height: 70px;"></div>
 
 
         <!-- intro -->
-        <section>
+        <section class="bgdblue">
+            <div style="height: 70px;"></div>
 
             <div class="container">
                 <div class="row">
@@ -113,7 +113,8 @@
                 </div>
 
                 <div class="row">
-                    <p class="fs-5 font-exo">Find out how much you know about fire ecology and the environment. Do read the case studies before as that will help a lot</p>
+                    <p class="fs-5 font-exo">Find out how much you know about fire ecology and the environment. Do read
+                        the case studies before as that will help a lot</p>
                 </div>
             </div>
 
@@ -123,7 +124,7 @@
 
 
         <!-- quiz -->
-        <section>
+        <section class="bgdblue">
 
             <div style="height: 70px;" class="bgdblue"></div>
 
@@ -183,9 +184,9 @@
                     </div>
                 </div>
             </div>
+            <div style="height: 50px;" class="quizbg"></div>
 
         </section>
-        <div style="height: 50px;" class="quizbg"></div>
 
         <!-- footer -->
         <footer class="bgblack pb-5 pt-3">
