--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
         <!-- defination -->
         <section class="bgdefination" id="defination">
 
-            
+
 
             <div style="height: 60px;"></div>
 
@@ -174,8 +174,8 @@
 
                         <!-- MOSAIC PATTERS    -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
-                            <p class="text-center mb-2"><img src="img/mosaic_pattern.jpg"
-                                    class="img-fluid img-effects " alt="JFSP logo"></p>
+                            <p class="text-center mb-2"><img src="img/mosaic_pattern.jpg" class="img-fluid img-effects "
+                                    alt="mosaic attern img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 "> Mosaic Patterns</p>
 
 
@@ -196,7 +196,8 @@
 
                         <!-- soil -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/soil.jpeg" class="img-fluid img-effects "
+                                    alt="soil img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 "> Soil</p>
 
 
@@ -216,7 +217,8 @@
 
                         <!-- animals -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/animals.jpeg" class="img-fluid img-effects "
+                                alt="animal img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 "> Animal Population</p>
 
 
@@ -240,7 +242,8 @@
 
                         <!-- plant -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
-
+                            <p class="text-center mb-2"><img src="img/plant.jpeg" class="img-fluid img-effects "
+                                alt="plant img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 ">Plants</p>
 
 
