added videos navbar

--- a/about.html
+++ b/about.html
@@ -68,6 +68,9 @@
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                 class="nav-link hover-orange">Reports</a></b>
                     </li>
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="videos.html"
+                                class="nav-link hover-orange">Videos</a></b>
+                    </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
                                 class="nav-link hover-orange">Quiz</a></b>
@@ -218,7 +221,7 @@
                         <!-- animals -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
                             <p class="text-center mb-2"><img src="img/animals.jpeg" class="img-fluid img-effects "
-                                alt="animal img"></p>
+                                    alt="animal img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 "> Animal Population</p>
 
 
@@ -243,7 +246,7 @@
                         <!-- plant -->
                         <div class="col-10 col-md-7 col-lg-5 effects-card rounded-4 shadow-lg p-4 my-4">
                             <p class="text-center mb-2"><img src="img/plant.jpeg" class="img-fluid img-effects "
-                                alt="plant img"></p>
+                                    alt="plant img"></p>
                             <p class="fs-1 text-center font-tektur mt-3 ">Plants</p>
 
 
