--- a/blogwrite.html
+++ b/blogwrite.html
@@ -17,7 +17,7 @@
 
     </head>
 
-    <body onload="userIcon()" >
+    <body onload="userIcon()">
 
 
         <!-- navbar-->
@@ -61,6 +61,10 @@
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                 class="nav-link hover-orange">Reports</a></b>
+                    </li>
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="videos.html"
+                                class="nav-link hover-orange">Videos</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
@@ -175,7 +179,7 @@
                     <span class="spinner-border spinner-border-md text-info " aria-hidden="true"></span>
                     <span role="status" class="fs-3 ms-2">Posting your blog, please wait...</span> <br> <br>
                     <span role="status" class="fs-4 ms-2">You will be redirected to blog page once complete</span>
-                    
+
                 </div>
             </div>
         </div>
