--- a/quiz.html
+++ b/quiz.html
@@ -62,6 +62,10 @@
                                 class="nav-link hover-orange ">Reports</a></b>
                     </li>
 
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="videos.html"
+                                class="nav-link hover-orange">Videos</a></b>
+                    </li>
+
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
                                 class="nav-link hover-orange active">Quiz</a></b>
                     </li>
