--- a/reports.html
+++ b/reports.html
@@ -76,7 +76,9 @@
                         <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                     class="nav-link hover-orange active">Reports</a></b>
                         </li>
-
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="videos.html"
+                                    class="nav-link hover-orange">Videos</a></b>
+                        </li>
                         <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
                                     class="nav-link hover-orange">Quiz</a></b>
                         </li>
@@ -138,7 +140,7 @@
         <!-- Section 1 -->
         <section class="caseStudy1">
 
-           
+
 
 
             <div style="height: 20px;"></div>
