--- a/videos.html
+++ b/videos.html
@@ -314,7 +314,7 @@
 
 
                     <div class="ratio ratio-16x9 w-75 mt-5 d-block">
-                        <iframe src="https://www.youtube.com/embed/gN-T6NDWQ1g" title="YouTube video player"
+                        <iframe src="https://www.youtube.com/embed/0o6ezu_h6iE" title="YouTube video player"
                             frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -342,7 +342,6 @@
 
                     </div>
 
-                    <hr class="my-5" style="width: 90%;">
 
 
                 </div>
