--- a/videos.html
+++ b/videos.html
@@ -203,7 +203,7 @@
 
 
 
-        <!-- Section 2 -->
+        <!-- WSJ 2 -->
         <section class="video2">
 
             <!-- curve -->
@@ -267,7 +267,6 @@
 
                     </div>
 
-                    <hr class="my-5" style="width: 90%;">
 
 
                 </div>
