--- a/videos.html
+++ b/videos.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>Fire Ecology | Home</title>
+        <title>Fire Ecology | Videos</title>
 
 
         <!-- Bootstrap  -->
