--- a/blogwrite.html
+++ b/blogwrite.html
@@ -130,7 +130,7 @@
 
                         <!-- TITLE text box -->
                         <input type="text" class="form-control blogField" id="title" maxlength="40"
-                            placeholder="Title of the blog">
+                            placeholder="Title of the blog" required>
                     </div>
 
 
@@ -140,7 +140,7 @@
 
                         <!-- Author text box -->
                         <input type="text" class="form-control blogField" id="author" maxlength="25"
-                            placeholder="Name of the writer">
+                            placeholder="Name of the writer" required>
                     </div>
 
 
@@ -148,7 +148,7 @@
                         <label for="thumbnail" class="form-label">Thumbnail</label>
 
                         <!-- Author text box -->
-                        <input type="file" accept=".jpg,.jpeg,.png" class="form-control blogField" id="thumbnail">
+                        <input required type="file" accept=".jpg,.jpeg,.png" class="form-control blogField" id="thumbnail">
                     </div>
 
 
@@ -158,14 +158,14 @@
                         <label for="blogContent" class="form-label">Content</label>
 
                         <!-- field with the content of the blog -->
-                        <textarea class="form-control blogField" id="blogContent" rows="10"
+                        <textarea required class="form-control blogField" id="blogContent" rows="10"
                             placeholder="Once upon a time in......"></textarea>
                     </div>
 
                     <!-- post button -->
                     <div class="mt-2">
 
-                        <button class="btn buttonPost px-3 " onclick="blog_save()" id="postButton">Post</button>
+                        <button type="submit" class="btn buttonPost px-3 " onclick="blog_save()" id="postButton">Post</button>
 
                     </div>
                 </div>
