--- a/reports.html
+++ b/reports.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title>Fire Ecology | Home</title>
+        <title>Fire Ecology | Reports</title>
 
 
         <!-- Bootstrap  -->
