added videos to footer

--- a/blog.html
+++ b/blog.html
@@ -175,7 +175,7 @@
             </section>
 
             <!-- footer -->
-            <footer class="bgblack pb-5 pt-3 mt-5">
+            <footer class="bgblack pb-5 pt-3">
                 <div class="container">
                     <div class="row justify-content-center">
 
@@ -201,11 +201,15 @@
                                     <a href="blog.html"
                                         class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
                                     </a> <br>
-                                    <a href="quiz.html"
-                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
-                                    </a> <br>
+
                                     <a href="reports.html"
                                         class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
+                                    </a> <br>
+                                    <a href="videos.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Videos
+                                    </a> <br>
+                                    <a href="quiz.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
                                     </a> <br>
 
                                 </div>
@@ -219,6 +223,8 @@
 
                 </div>
             </footer>
+
+
         </section>
 
         <section id="blogReads">
