--- a/quiz.html
+++ b/quiz.html
@@ -218,11 +218,15 @@
                                 <a href="blog.html"
                                     class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
                                 </a> <br>
-                                <a href="quiz.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
-                                </a> <br>
+
                                 <a href="reports.html"
                                     class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
+                                </a> <br>
+                                <a href="videos.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Videos
+                                </a> <br>
+                                <a href="quiz.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
                                 </a> <br>
 
                             </div>
@@ -236,6 +240,7 @@
 
             </div>
         </footer>
+
 
 
         <!-- Firebase Connection -->
