--- a/videos.html
+++ b/videos.html
@@ -123,7 +123,7 @@
                         <b>
                             <p class="fs-1 font-exo">Videos</p>
                             <p class="fs-4 font-exo">Watch these specially handpicked videos to learn more about fire
-                                ecology! We have watched all of these before reccomending them </p>
+                                ecology! We have watched all of these before reccomending them to you.</p>
 
                         </b>
 
