--- a/index.html
+++ b/index.html
@@ -383,8 +383,198 @@
 
 
 
+
+        <section class="FAQ pb-5">
+
+
+            <!-- curve -->
+            <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="bgCaseStudy" fill="currentcolor" fill-opacity="1"></path>
+            </svg>
+
+
+
+            <div class="container mt-5">
+
+                <div class="row justify-content-evenly">
+
+                    <div class="col-12 text-center">
+                        <h3 class="fs-2">FAQ's</h3>
+
+                    </div>
+
+                </div>
+
+
+                <div class="row my-4">
+                    <div class="accordion accordion-flush" id="accordionExample">
+
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header bgFAQans ">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
+                                    aria-controls="collapseOne">
+                                    What is Fire Ecology?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body  text-dark">
+                                    Fire ecology is the study of how fires interact with ecosystems, including their
+                                    role in shaping landscapes, influencing plant and animal communities, and
+                                    contributing to overall ecosystem health.
+
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header bgFAQans">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
+                                    Why do Fires Occur in Nature?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Fires are a natural ecological process that can be ignited by lightning or human
+                                    activities. They play a vital role in maintaining ecosystem dynamics, nutrient
+                                    cycling, and promoting biodiversity.
+
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header ">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree">
+                                    How do Plants and Animals Adapt to Fire?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent=" #accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Many plants and animals have evolved unique adaptations to survive and even thrive
+                                    in fire-prone environments. Some plants have fire-resistant bark, while certain
+                                    animals can quickly relocate or burrow to safety.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
+                                    aria-controls="collapseFour">
+                                    What are the Ecological Effects of Wildfires?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse bgFAQans""
+                                data-bs-parent=" #accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Wildfires can have both immediate and long-term ecological effects, such as changing
+                                    vegetation patterns, opening up habitats for new growth, and influencing wildlife
+                                    behavior and population dynamics.
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
+                                    aria-controls="collapseFive">
+                                    Can Fire be Beneficial to Ecosystems?
+                                </button>
+                            </h2>
+                            <div id="collapseFive" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Yes, controlled and naturally occurring fires can be beneficial by reducing
+                                    accumulated dead plant material, promoting seed germination, and encouraging the
+                                    growth of fire-adapted species.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false"
+                                    aria-controls="collapseSix">
+                                    How Do Humans Impact Fire Ecology?
+                                </button>
+                            </h2>
+                            <div id="collapseSix" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent=" #accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Human activities, such as fire suppression, urbanization, and land management
+                                    practices, can alter natural fire regimes and disrupt ecosystems' ability to adapt
+                                    to fire.
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false"
+                                    aria-controls="collapseSeven">
+                                    How Does Climate Change Impact Fire Ecology?
+                                </button>
+                            </h2>
+                            <div id="collapseSeven" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent=" #accordionExample">
+                                <div class="accordion-body text-dark">
+                                    Climate change can influence fire behavior, frequency, and severity, potentially
+                                    altering ecosystems and challenging traditional fire management approaches.
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed bgFAQbtn" type="button"
+                                    data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false"
+                                    aria-controls="collapseEight">
+                                    Where Can I Learn More about Fire Ecology Research?
+                                </button>
+                            </h2>
+                            <div id="collapseEight" class="accordion-collapse collapse bgFAQans"
+                                data-bs-parent=" #accordionExample">
+                                <div class="accordion-body text-dark">
+                                    There are numerous resources available, including scientific publications,
+                                    government agencies, research institutions, and conservation organizations that
+                                    provide in-depth information on fire ecology and related topics.
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- footer -->
-        <footer class="bgblack pb-5 pt-3">
+        <footer class="bgblack pb-5 pt-3 ">
             <div class="container">
                 <div class="row justify-content-center">
 
@@ -431,7 +621,6 @@
 
             </div>
         </footer>
-
 
 
 
